nashorn/test/script/basic/NASHORN-100.js.EXPECTED
SyntaxError:32:Invalid return statement
return;
^
